--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <div class="cup"></div>
       <div class="cream"></div>
       <div class="berry"></div>
-      <div class="leaves"></div>      
+      <div class="leaves"></div>
+      <div class="smile"></div>
     </div>
   </body>
 </html>
