--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
-    <title>hello-world</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="img/*.png" rel="icon" type="image/png">
+    <title>...</title>
+    <meta name="Description" content="...">
+		<meta name="Keywords" content="...">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
   </head>
   
   <body>
@@ -14,4 +20,5 @@
       <div class="smile"></div>
     </div>
   </body>
+  
 </html>
